--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<doby>
-<h1>mein page</h1>
+<html lang="en">
+    <head>
+<meta charset="UFT-8">
+<meta name="viewport" content="width=device-width">
 
+    </head>
+    <doby>
+    <header>
+        <nav>
+        <a href="./index.html">Web
+            Studio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
 
-
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </doby>
+</html>
