--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-
     </header>
     <main>
         <section></section>
@@ -26,6 +25,7 @@
         <section></section>
         <section></section>
     </main>
-    <footer></footer>
+    <footer>
+</footer>
 </doby>
 </html>
