--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-<meta charset="UFT-8">
-<meta name="viewport" content="width=device-width">
+    <!DOCTYPE html>
+    <html lang="en">
+        <head>
+    <meta charset="UFT-8">
+    <meta name="viewport" content="width=device-width">
 
-    </head>
-    <doby>
-    <header>
-        <nav>
-        <a href="./index.html">Web
-            Studio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-    </main>
-    <footer>
-</footer>
-</doby>
-</html>
+        </head>
+        <doby>
+        <header>
+            <nav>
+            <a href="./index.html">Web
+                Studio</a>
+                <ul>
+                    <li><a href="">Studio</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h1>Solutions
+                    for Your Business</h1>
+                <button type="button">Order Service</button>
+            </section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
+        <footer>
+    </footer>
+    </doby>
+    </html>
