--- a/index.html
+++ b/index.html
@@ -14,16 +14,36 @@
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Contacts</a></li>
+                    <li><a href="">info@devstudio.com</a></li>
+                    <li><a href="">+11 (000) 111-11-11</a></li>
                 </ul>
             </nav>
         </header>
+
+
         <main>
             <section>
                 <h1>Solutions
                     for Your Business</h1>
-                <button type="button">Order Service</button>
+                    <button type="button">Order Service</button>
+</section>
+
+            <section>
+<lu>
+    <li>
+        <h2>Strategy</h2>
+        <p>Our goal is to identify the business
+            problem to walk away with the perfect and creative solution. </p>
+        </li>
+        <li>
+        
+        </li>
+
+    
+</lu>
+
+
             </section>
-            <section></section>
             <section></section>
             <section></section>
             <section></section>
