--- a/index.html
+++ b/index.html
@@ -1,55 +1,53 @@
     <!DOCTYPE html>
     <html lang="en">
-        <head>
+    <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width">
-
-        </head>
-        <doby>
-        <header>
-            <nav>
-            <a href="./index.html">Web
-                Studio</a>
-                <ul>
-                    <li><a href="">Studio</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contacts</a></li>
-                    <li><a href="">info@devstudio.com</a></li>
-                    <li><a href="">+11 (000) 111-11-11</a></li>
-                </ul>
-            </nav>
-        </header>
-
-
-        <main>
-            <section>
-                <h1>Solutions
-                    for Your Business</h1>
-                    <button type="button">Order Service</button>
-</section>
-
-            <section>
-<lu>
+    </head>
+    <doby>
+    <header>
+    <nav>
+    <a href="./index.html">Web Studio</a>
+    <ul>
+    <li><a href="">Studio</a></li>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Contacts</a></li>
+    <li><a href="">info@devstudio.com</a></li>
+    <li><a href="">+11 (000) 111-11-11</a></li>
+    </ul>
+    </nav>
+    </header>
+    <main>
+    <section>
+    <h1>Solutions for Your Business</h1>
+    <button type="button">Order Service</button>
+    </section>
+    <section>
+    <lu>
     <li>
-        <h2>Strategy</h2>
-        <p>Our goal is to identify the business
-            problem to walk away with the perfect and creative solution. </p>
-        </li>
-        <li>
-        
-        </li>
-
-    
-</lu>
-
-
-            </section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </main>
-        <footer>
+    <h2>Strategy</h2>
+    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+    </li>
+    <li>
+    <h2>Punctuality</h2>
+    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    </li>
+    <li>
+    <h2>Diligence</h2>
+    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+    </li>
+    <li>
+    <h2>Technologies</h2>
+    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    </li>
+    </lu>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    </main>
+    <footer>
     </footer>
     </doby>
     </html>
