--- a/index.html
+++ b/index.html
@@ -1,53 +1,80 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-    <meta charset="UFT-8">
-    <meta name="viewport" content="width=device-width">
-    </head>
-    <doby>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UFT-8" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
+  <doby>
     <header>
-    <nav>
-    <a href="./index.html">Web Studio</a>
-    <ul>
-    <li><a href="">Studio</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Contacts</a></li>
-    <li><a href="">info@devstudio.com</a></li>
-    <li><a href="">+11 (000) 111-11-11</a></li>
-    </ul>
-    </nav>
+      <nav>
+        <a href="./index.html">Web Studio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+11 (000) 111-11-11</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-    <section>
-    <h1>Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
-    </section>
-    <section>
-    <lu>
-    <li>
-    <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-    </li>
-    <li>
-    <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-    </li>
-    <li>
-    <h3>Diligence</h3>
-    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-    </li>
-    <li>
-    <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-    </li>
-    </lu>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+      <section>
+        <h1>Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <lu>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </lu>
+      </section>
+<h3>Our Team</h3>
+<ul>
+	<li>
+		<a href="./index.html">
+			<img src="images/Team-1.jpg" alt="Mark Guerrero"/>
+		</a>
+        <p>Product Designer</p>
+	</li>
+	<li>
+		<a href="">
+			<img src="" alt=""/>
+		</a>
+	</li>
+</ul>
+      <section>
+
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
-    <footer>
-    </footer>
-    </doby>
-    </html>
+    <footer></footer>
+  </doby>
+</html>
