--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <ul>
 	<li>
 		<a href="./index.html">
-			<img src="images/Team-1.jpg" alt="Mark Guerrero"/>
+			<img src="images/Team-1.jpg.jpg" alt="Mark Guerrero"/>
 		</a>
         <p>Product Designer</p>
 	</li>
