--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 <h3>Our Team</h3>
 <ul>
 	<li>
-		<a href="./index.html">
-			<img src="images/Team-1.jpg.jpg" alt="Mark Guerrero"/>
-		</a>
+		<a href="./team-1.jpg.jpg" target="_blank">
+			</a>
+        <img src="./team-1.jpg.jpg" alt="Mark Guerrero"
+            width="264" height="260"/>
+            <h4>Mark Guerrero</h4>
         <p>Product Designer</p>
 	</li>
 	<li>
@@ -68,6 +70,7 @@
 		</a>
 	</li>
 </ul>
+
       <section>
 
       </section>
