--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 <h3>Our Team</h3>
 <ul>
 	<li>
-		<a href="./team-1.jpg.jpg" target="_blank">
-			</a>
         <img src="./team-1.jpg.jpg" alt="Mark Guerrero"
             width="264" height="260"/>
-            <h4>Mark Guerrero</h4>
-        <p>Product Designer</p>
+		<a href="./team-1.jpg.jpg" target="_blank">Mark Guerrero Product Designer
+			
+        
+        </a>
+        
 	</li>
 	<li>
 		<a href="">
