--- a/index.html
+++ b/index.html
@@ -60,18 +60,27 @@
         <img src="./team-1.jpg.jpg" alt="Mark Guerrero"
             width="264" height="260"/>
 		<a href="./team-1.jpg.jpg" target="_blank">Mark Guerrero Product Designer
-			
-        
-        </a>
-        
-	</li>
-	<li>
-		<a href="">
-			<img src="" alt=""/>
-		</a>
-	</li>
+			</a>
+        </li>
+        <li>
+            <img src="./team-2.jpg.jpg" alt="Tom Ford"
+                width="264" height="260"/>
+            <a href="./team-2.jpg.jpg" target="_blank">Tom Ford Frontend Developer
+                </a>
+            </li>
+            <li>
+                <img src="./team-3.jpg.jpg" alt="Camila Garcia"
+                    width="264" height="260"/>
+                <a href="./team-3.jpg.jpg" target="_blank">Camila Garcia Marketing
+                    </a>
+                </li>
+                <li>
+                    <img src="./team-4.jpg.jpg" alt="Daniel Wilson"
+                        width="264" height="260"/>
+                    <a href="./team-4.jpg.jpg" target="_blank">Daniel Wilson UI Designer
+                        </a>
+                    </li>
 </ul>
-
       <section>
 
       </section>
