--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UFT-8" />
+    <meta charset="uft-8" />
     <meta name="viewport" content="width=device-width initial-ckale=1.0" />
     <title>Document</title>
   </head>
@@ -26,7 +26,7 @@
       <h1>Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
-    <section>
+    
       <lu>
         <li>
           <h2>Strategy</h2>
@@ -57,7 +57,7 @@
           </p>
         </li>
       </lu>
-    </section>
+   
     <h3>Our Team</h3>
     <ul>
       <li>
