--- a/index.html
+++ b/index.html
@@ -26,82 +26,82 @@
       <h1>Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
-    
-      <lu>
-        <li>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </lu>
-   
-    <h3>Our Team</h3>
-    <ul>
-      <li>
-        <img
-          src="./team-1.jpg.jpg"
-          alt="Mark Guerrero"
-          width="264"
-          height="260"
-        />
-        <a href="./team-1.jpg.jpg" target="_blank"
-          >Mark Guerrero Product Designer
-        </a>
-      </li>
-      <li>
-        <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
-        <a href="./team-2.jpg.jpg" target="_blank"
-          >Tom Ford Frontend Developer
-        </a>
-      </li>
-      <li>
-        <img
-          src="./team-3.jpg.jpg"
-          alt="Camila Garcia"
-          width="264"
-          height="260"
-        />
-        <a href="./team-3.jpg.jpg" target="_blank">Camila Garcia Marketing </a>
-      </li>
-      <li>
-        <img
-          src="./team-4.jpg.jpg"
-          alt="Daniel Wilson"
-          width="264"
-          height="260"
-        />
-        <a href="./team-4.jpg.jpg" target="_blank"
-          >Daniel Wilson UI Designer
-        </a>
-      </li>
-    </ul>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
   </main>
+  <main>
+    <!--<h2>section2</h2>-->
+    <lu>
+      <li>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+      </li>
+      <li>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+      </li>
+      <li>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands with the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+      </li>
+      <li>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </li>
+    </lu>
+  </main>
+  <h3>Our Team</h3>
+  <ul>
+    <li>
+      <img
+        src="./team-1.jpg.jpg"
+        alt="Mark Guerrero"
+        width="264"
+        height="260"
+      />
+      <a href="./team-1.jpg.jpg" target="_blank"
+        >Mark Guerrero Product Designer
+      </a>
+    </li>
+    <li>
+      <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
+      <a href="./team-2.jpg.jpg" target="_blank"
+        >Tom Ford Frontend Developer
+      </a>
+    </li>
+    <li>
+      <img
+        src="./team-3.jpg.jpg"
+        alt="Camila Garcia"
+        width="264"
+        height="260"
+      />
+      <a href="./team-3.jpg.jpg" target="_blank">Camila Garcia Marketing </a>
+    </li>
+    <li>
+      <img
+        src="./team-4.jpg.jpg"
+        alt="Daniel Wilson"
+        width="264"
+        height="260"
+      />
+      <a href="./team-4.jpg.jpg" target="_blank">Daniel Wilson UI Designer </a>
+    </li>
+  </ul>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+
   <footer></footer>
 </html>
