--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button type="button">Order Service</button>
     </section>
   </main>
-  <main>
+  <!--<main>-->
     <!--<h2>section2</h2>-->
     <lu>
       <li>
@@ -98,10 +98,14 @@
       <a href="./team-4.jpg.jpg" target="_blank">Daniel Wilson UI Designer </a>
     </li>
   </ul>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
+  <!--</main>-->
 
+  
+  <header>
+    <nav>
+      <a href="./index.html">Web Studio</a>
+    </nav>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </header>
   <footer></footer>
 </html>
