--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </nav>
     <address>
       <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
+        <li><a href="./index.html">info@devstudio.com</a></li>
+        <li><a href="./index.html">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
@@ -100,7 +100,7 @@
   </ul>
   <!--</main>-->
 
-  
+
   <header>
     <nav>
       <a href="./index.html">Web Studio</a>
