--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </nav>
     <address>
       <ul>
-        <li><a href="./index.html">info@devstudio.com</a></li>
-        <li><a href="./index.html">+11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
@@ -59,7 +59,7 @@
         </p>
       </li>
     </lu>
-  </main>
+ <!--<main>-->
   <h3>Our Team</h3>
   <ul>
     <li>
