--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width initial-ckale=1.0" />
     <title>Document</title>
   </head>
-
-  <header>
+  <body>
+<header>
     <nav>
       <a href="./index.html">Web Studio</a>
       <ul>
+        <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
@@ -20,7 +21,7 @@
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
-  </header>
+</header>
   <main>
     <section>
       <h1>Solutions for Your Business</h1>
@@ -28,7 +29,7 @@
     </section>
   </main>
   <!--<main>-->
-    <!--<h2>section2</h2>-->
+    <h2>section2</h2>
     <lu>
       <li>
         <h3>Strategy</h3>
@@ -99,13 +100,11 @@
     </li>
   </ul>
   <!--</main>-->
-
-
   <header>
     <nav>
       <a href="./index.html">Web Studio</a>
     </nav>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </header>
-  <footer></footer>
+</body>
 </html>
