--- a/index.html
+++ b/index.html
@@ -1,110 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="uft-8" />
-    <meta name="viewport" content="width=device-width initial-ckale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Документ</title>
   </head>
   <body>
-<header>
-    <nav>
-      <a href="./index.html">Web Studio</a>
+    <header>
+      <nav>
+        <a href="./index.html">Web Studio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section>
+        <h1>Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <h2>section2</h2>
       <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
       </ul>
-    </nav>
-    <address>
+
+      <h3>Our Team</h3>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li>
+          <img
+            src="./team-1.jpg.jpg"
+            alt="Mark Guerrero"
+            width="264"
+            height="260"
+          />
+          <a href="./team-1.jpg.jpg" target="_blank"
+            >Mark Guerrero Product Designer
+          </a>
+        </li>
+        <li>
+          <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
+          <a href="./team-2.jpg.jpg" target="_blank"
+            >Tom Ford Frontend Developer
+          </a>
+        </li>
+        <li>
+          <img
+            src="./team-3.jpg.jpg"
+            alt="Camila Garcia"
+            width="264"
+            height="260"
+          />
+          <a href="./team-3.jpg.jpg" target="_blank"
+            >Camila Garcia Marketing
+          </a>
+        </li>
+        <li>
+          <img
+            src="./team-4.jpg.jpg"
+            alt="Daniel Wilson"
+            width="264"
+            height="260"
+          />
+          <a href="./team-4.jpg.jpg" target="_blank"
+            >Daniel Wilson UI Designer
+          </a>
+        </li>
       </ul>
-    </address>
-</header>
-  <main>
-    <section>
-      <h1>Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-    </section>
-  </main>
-  <!--<main>-->
-    <h2>section2</h2>
-    <lu>
-      <li>
-        <h3>Strategy</h3>
+
+      <footer>
+        <nav>
+          <a href="./index.html">Web Studio</a>
+        </nav>
         <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
-      </li>
-      <li>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </li>
-      <li>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </li>
-      <li>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </li>
-    </lu>
- <!--<main>-->
-  <h3>Our Team</h3>
-  <ul>
-    <li>
-      <img
-        src="./team-1.jpg.jpg"
-        alt="Mark Guerrero"
-        width="264"
-        height="260"
-      />
-      <a href="./team-1.jpg.jpg" target="_blank"
-        >Mark Guerrero Product Designer
-      </a>
-    </li>
-    <li>
-      <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
-      <a href="./team-2.jpg.jpg" target="_blank"
-        >Tom Ford Frontend Developer
-      </a>
-    </li>
-    <li>
-      <img
-        src="./team-3.jpg.jpg"
-        alt="Camila Garcia"
-        width="264"
-        height="260"
-      />
-      <a href="./team-3.jpg.jpg" target="_blank">Camila Garcia Marketing </a>
-    </li>
-    <li>
-      <img
-        src="./team-4.jpg.jpg"
-        alt="Daniel Wilson"
-        width="264"
-        height="260"
-      />
-      <a href="./team-4.jpg.jpg" target="_blank">Daniel Wilson UI Designer </a>
-    </li>
-  </ul>
-  <!--</main>-->
-  <header>
-    <nav>
-      <a href="./index.html">Web Studio</a>
-    </nav>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-  </header>
-</body>
+      </footer>
+    </main>
+  </body>
 </html>
