--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="">Web Studio</a>
+        <a href="./index.html"></a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -24,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h1>Solutions for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
@@ -102,6 +103,7 @@
           </a>
         </li>
       </ul>
+    </body>
 
       <footer>
         <nav>
@@ -113,5 +115,5 @@
         </p>
       </footer>
     </main>
-  </body>
+  
 </html>
