--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </address>
     </header>
 
-
+<main>
     
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
@@ -113,7 +113,7 @@
           </a>
         </li>
       </ul>
-
+    </main>
     
 
 <footer>
