--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button type="button">Order Service</button>
 
 
-      <h2>section2</h2>
+      <!--<h2>section2</h2>-->
       <ul>
         <li>
           <h3>Strategy</h3>
