--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </ul>
 
 
-      <h3>Our Team</h3>
+      <h2>Our Team</h2>
 
       <ul>
         <li>
@@ -77,9 +77,10 @@
             width="264"
             height="260"
           />
-          <a href="./team-1.jpg.jpg" target="_blank"
-            >Mark Guerrero Product Designer
-          </a>
+         
+           <H3>Mark Guerrero</H3> 
+            <p>Product Designer</p>
+          
         </li>
 
         <li>
