--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
         <li>
           <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
-          <a href="./team-2.jpg.jpg" target="_blank"
-            >Tom Ford Frontend Developer
-          </a>
+          
+          <H3>Tom Ford</H3> 
+          <p>Frontend Developer</p>
         </li>
 
         <li>
@@ -97,9 +97,8 @@
             width="264"
             height="260"
           />
-          <a href="./team-3.jpg.jpg" target="_blank"
-            >Camila Garcia Marketing
-          </a>
+          <H3>Camila Garcia</H3> 
+          <p>Marketing</p>
         </li>
 
         <li>
@@ -109,9 +108,8 @@
             width="264"
             height="260"
           />
-          <a href="./team-4.jpg.jpg" target="_blank"
-            >Daniel Wilson UI Designer
-          </a>
+           <H3>Daniel Wilson</H3> 
+          <p>UI Designer</p>
         </li>
       </ul>
     </main>
