--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <ul>
         <li>
           <img
-            src="./team-1.jpg.jpg"
+            src="./team-1.jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
@@ -84,7 +84,7 @@
         </li>
 
         <li>
-          <img src="./team-2.jpg.jpg" alt="Tom Ford" width="264" height="260" />
+          <img src="./team-2.jpg" alt="Tom Ford" width="264" height="260" />
           
           <H3>Tom Ford</H3> 
           <p>Frontend Developer</p>
@@ -92,7 +92,7 @@
 
         <li>
           <img
-            src="./team-3.jpg.jpg"
+            src="./team-3.jpg"
             alt="Camila Garcia"
             width="264"
             height="260"
@@ -103,7 +103,7 @@
 
         <li>
           <img
-            src="./team-4.jpg.jpg"
+            src="./team-4.jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
