--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
         <p>Product Designer</p>
       </li>
       <li>
-        <img src="./team-2.jpg" alt="Tom Ford" width="264" height="260" />
-
+        <img 
+          src="./team-2.jpg"
+          alt="Tom Ford" 
+          width="264" 
+          height="260" />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
@@ -84,7 +87,7 @@
     </li>
   </ul>
 
-</main>
+    </main>
     <footer>
       <nav>
         <a href="./index.html">WebStudio</a>
