--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
   <!--<h2>section2</h2>-->
+  <section>
+    <h2>section2,5</h2>
     <ul>
       <li>
         <h3>Strategy</h3>
@@ -86,7 +88,7 @@
       <p>UI Designer</p>
     </li>
   </ul>
-
+</section>
     </main>
     <footer>
       <nav>
