--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     </address>
   </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-  <!--<h2>section2</h2>-->
-  <section>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+        </section>
+    </main>
+    <section>
     <h2>section2,5</h2>
     <ul>
       <li>
@@ -49,6 +51,8 @@
         </p>
       </li>
     </ul>
+    </section>
+    <section>
     <h2>Our Team</h2>
     <ul>
       <li>
