--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
   </header>
     <main>
       <section>
+        <!--<h2>section1</h2>-->
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
         </section>
-    </main>
+
     <section>
-    <h2>section2,5</h2>
+    <h2>section2.5</h2>
     <ul>
       <li>
         <h3>Strategy</h3>
@@ -52,6 +53,7 @@
       </li>
     </ul>
     </section>
+    
     <section>
     <h2>Our Team</h2>
     <ul>
