--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       </li>
     </ul>
     </section>
-    
+
     <section>
     <h2>Our Team</h2>
     <ul>
       <li>
         <img
-          src="./team-1.jpg"
+          src="./images/team-1.jpg"
           alt="Mark Guerrero"
           width="264"
           height="260"/>
@@ -68,7 +68,7 @@
       </li>
       <li>
         <img 
-          src="./team-2.jpg"
+          src="./images/team-2.jpg"
           alt="Tom Ford" 
           width="264" 
           height="260" />
@@ -77,7 +77,7 @@
       </li>
       <li>
         <img
-          src="./team-3.jpg"
+          src="./images/team-3.jpg"
           alt="Camila Garcia"
           width="264"
           height="260"/>
@@ -86,7 +86,7 @@
     </li>
     <li>
         <img
-          src="./team-4.jpg"
+          src="./images/team-4.jpg"
           alt="Daniel Wilson"
           width="264"
           height="260"/>
