--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <ul>
       <li>
         <img
-          src="./images/team-1.jpg"
+          src="./images/Team-1.jpg"
           alt="Mark Guerrero"
           width="264"
           height="260"/>
@@ -68,7 +68,7 @@
       </li>
       <li>
         <img 
-          src="./images/team-2.jpg"
+          src="./images/Team-2.jpg"
           alt="Tom Ford" 
           width="264" 
           height="260" />
@@ -77,7 +77,7 @@
       </li>
       <li>
         <img
-          src="./images/team-3.jpg"
+          src="./images/Team-3.jpg"
           alt="Camila Garcia"
           width="264"
           height="260"/>
@@ -86,7 +86,7 @@
     </li>
     <li>
         <img
-          src="./images/team-4.jpg"
+          src="./images/Team-4.jpg"
           alt="Daniel Wilson"
           width="264"
           height="260"/>
