--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="./images/team-1.jpg"
+              src="/images/team-1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="./images/team-2.jpg"
+              src="/images/team-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="./images/team-3.jpg"
+              src="/images/team-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -98,7 +98,7 @@
           </li>
           <li>
             <img
-              src="./images/team-4.jpg"
+              src="/images/team-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -120,4 +120,3 @@
 </html>
 
 
-<img src="./"
