--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>
             <img
               src="/images/team-1.jpg"
-              alt="Mark Guerrero"
+              alt="Mark "
               width="264"
               height="260"
             />
