--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
 
       <section>
-        <h2>section2.5</h2>
+        <h2>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
